
Version (CVS)
-------------
XML:	Numerous bug fixes in Schema Object Model and Validation code (Arnaud)

XML:    Added support for the extremely powerful 'handler' attribute on
        the field element for the mapping (kvisco - 20011205)

XML:    Patch to XMLMappingLoader to fix dropped multiple id fields. This is a
        actually a patch to fix bugs which occur in MappingLoader and an errant
        implementation of ClassDescriptor (ClassDescriptorImpl). This fix should
        be moved once we have consensus from both JDO + XML teams (kvisco - 20011204).

XML:    Support for Identity-Constraints in the Schema Object Model and 
        SchemaWriter. Not yet supported in SourceGenerator (kvisco) 20011120

XML:    Applied Nathan Green's patch to allow "all" option when prompting
        to overwrite files during source code generation. (kvisco) 20011113

XML:    A number of improvements to SchemaWriter (kvisco) 20011112

XML:    Applied Glenn Nielsen's patch to allow double qoutes in default/fixed 
        schema values (kvisco) 20011111.

XML:    Fixed bug that prevented elements that reference each other to generate 
        classes. It removes the StackOverFlow Exception. (Arnaud)

XML:    Added code from Matt Small [msmall@clickability.com] that improves the SchemaWriter support (Arnaud)

XML:    Fixed bug in the generated descriptors to correctly generate validation code when collections are used.
        (Reported by Dr. Louis Coetzee [lcoetzee@subversion.icomtek.csir.co.za]) (Arnaud)

XML:    Added QName support in the marshalling framework (when used via the mapping or via
        the Source Code Generator) (Arnaud)


XML:    Added special code to prevent creating a default XML name when using the "matches"
        attribute for bind-xml element in the mapping file. (kvisco) 20010815

XML:    Fixed bug with introspector...first character of field name was not being
        decapitalized. This caused a bug in the "auto-complete" feature.