@@ -14,12 +14,6 @@
 
       <p><b>$RELEASE_DATE$</b> Version $VERSION$ is now <a href="download.xml">available for download</a>.</p>
 
-      <p>
-         The <a href="presentations.xml">presentation</a> that Andrew Fawcet did for XML One London will be
-         available soon.
-      </p>
-
-
       <p><a href="origins.xml">About the origins of the name</a></p>
 
       <p><b>Note:</b> Presently we are hosting two mailing lists. Traffic is not too high,
